# automata

./: Cargo.toml  default.nix  example.npda  example.txt
automata/: Cargo.toml
automata/src/: lib.rs
automata/src/automatan/: fa.rs  mod.rs  pda.rs  tm.rs
automata/src/loader/: ast.rs  lexer.rs  log.rs  mod.rs  parser.rs
automata/src/sim/: dfa.rs  npda.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: automata_web_bg.wasm  index-26M3NQGZ.js  index-6JPGH2PA.js  index-A55P4VY5.js  index-AQEQHDHP.js  index-AZKVAVZF.js  index-CNUXJ5YP.js  index-G7WGUTLC.js  index-JIWFKFPO.js  index-KCM2MOUH.js  index-KEQ3NCWD.js  index-KRHPT5JI.js  index-LRSRLDO3.js  index-NX7QXB3A.js  index-PENHGGJI.js  index-QCFUIBCO.js  index-QK27BUL6.js  index-R44TBFLX.js  index-RBQSMPFL.js  index-THI65PDD.js  index-V5P5DPZO.js  index-VVM5BCNX.js  index-WBZODAIY.js  index-WMXO7DP4.js  index-X7SKWZAF.js  index-YDMM3Q5G.js  index-YVSDLI47.js  index.html  style.css
src/: ast.rs  dfa.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/automata/: dfa.rs  mod.rs  npda.rs
src/automatan/: fa.rs  pda.rs  tm.rs
src/loader/: ast.rs  lexer.rs  log.rs  mod.rs  parser.rs
web/: Cargo.toml  build.sh  deno.json  deploy.sh  init.sh  run.sh
web/root/: editor.css  editor.js  index.html  index.js  package.json  wasm.js
web/root/js/: vis-network.min.js
web/root/src/: automata.ts  bus.ts  constants.ts  controls.ts  editor.ts  examples.ts  highlight.ts  main.ts  paths.ts  share.ts  simulation.ts  splitters.ts  (+4 more)
web/src/: lib.rs  main.rs
web/tools/: build.ts  dev.ts
web_lib/: Cargo.toml
web_lib/src/: lib.rs
(+11 files in other folders)
