[package]
name = "automata"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
serde_with = { version = "3.0", features = ["default"], optional = true}
unicode-display-width = "*"
unicode-segmentation = "*"

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]